# ffi_plugin_test

./: .gitignore  .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/opencv/: CMakeLists.txt
android/opencv/sdk/native/jni/: OpenCVConfig.cmake
android/opencv/sdk/native/jni/abi-arm64-v8a/: OpenCVModules.cmake
android/opencv/sdk/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake  OpenCVModules.cmake
android/opencv/sdk/native/jni/abi-x86/: OpenCVConfig.cmake
android/opencv/sdk/native/jni/abi-x86_64/: OpenCVConfig.cmake  OpenCVModules.cmake
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/ffi_plugin_look_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: ffi_plugin_look.podspec
ios/Classes/: ffi_plugin_look.c  ffi_plugin_look.mm
lib/: ffi_plugin_look.dart  ffi_plugin_look_bindings_generated.dart
src/: CMakeLists.txt  ffi_plugin_look.c  ffi_plugin_look.cpp  ffi_plugin_look.h
